# ComfyUI-X-Portrait-Nodes

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  test_nodes.py
.github/workflows/: publish.yml
core/: test_xportrait.py
examples/: X-Portrait-example.json
model_lib/ControlNet/cldm/: model.py
model_lib/ControlNet/ldm/models/diffusion/: ddpm.py
model_lib/ControlNet/ldm/modules/: attention.py
model_lib/ControlNet/ldm/modules/diffusionmodules/: model.py
scripts/: test_xportrait.sh
