[project]
name = "comfyui-x-portrait-nodes"
description = "Implementation of X-Portrait nodes for ComfyUI, animate portraits with an input video and a reference image."
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "einops",
    "opencv-python",
    "matplotlib",
    "imageio",
    "omegaconf",
    "scikit-image",
    "face-alignment",
    "torchvision",
    "diffusers",
    "pytorch-lightning",
    "xformers",
    "sageattention",
    "transformers",
    "open-clip-torch",
    "imageio[ffmpeg]"
]

[project.urls]
Repository = "https://github.com/akatz-ai/ComfyUI-X-Portrait-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "akatz"
DisplayName = "ComfyUI-X-Portrait-Nodes"
Icon = "https://i.imgur.com/aiqQI7U.png"
